--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "modulePathIgnorePatterns": ["<rootDir>/Examples/"],
     "testPathIgnorePatterns": ["<rootDir>/Examples/"]
   },
+  "peerDependencies": {
+    "react-native": ">=0.55.4",
+    "react":">=16.3.1"
+  },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
     "babel-jest": "23.0.1",
